# hulk

./: .gitignore  Cargo.toml  README.md  gen_css.rs  later.txt  main-later.rs  need.md  safe.md  siteindex.html
data/: one_line_life_savers.md  std_file.md  system_time.md  thread_sleep.md  traits_in_rust.md  welcome.md
data2/: vecrtors_in_rust_part1.md
data_test/: vectors_in_rust_part1.md  vectors_in_rust_part2.md
data_test/a/: possible_future.md  thebook_ch10_traits_summary.md
data_test/b/: result_consumedcopy.md
notes/: create_file.md
site/: index.html  main.css  one_line_life_savers.html  possible_future_projects.html  result_consumed.html  std_file.html  system_time.html  thebook_ch10_traits_summary.html  thread_sleep.md.html  traits_in_rust.md.html  vecrtors_in_rust_part1.md.html  vectors_in_rust_part1.md.html  vectors_in_rust_part2.md.html  welcome.html
src/: app_consts.rs  gen.rs  hulk.rs  index.rs  init.rs  main-old.rs  main.rs  nav.rs
src/assets/: demo_md.rs  mod.rs
src/brown/: mod.rs
src/cli_gui/: cli_gen.rs  cli_help.rs  cli_index.rs  cli_init.rs  common.rs  mod.rs
src/controllers/: gen.rs  help.rs  index.rs  init.rs  mod.rs
src/core/: hulkfs.rs  mod.rs
src/files_gen/: mod.rs
src/generator/: abc.rs  create_site_folder.rs  flat.rs  md.rs  mod.rs  non_md.rs
src/gui/: card.rs
src/hfs/: mod.rs
src/hulk/: brown.rs  index.rs  init.rs
src/hulk_file/: get_nav.rs  md.rs  mod.rs  nav.rs  non_md.rs  readme.md
src/hunter/: mod.rs
src/index/: indexer.rs  mod.rs
src/index_all/: mod.rs
src/menu/: mod.rs
tests/: gen_test.rs  one.rs
(+41 files in other folders)
