[package]
name = "hulk"
version = "0.1.7"
edition = "2021"
authors = ["bilal <skillzaa.com@gmail.com>"]
description = "An ultra simple no hassle static site generator"

repository = "https://github.com/skillzaa/hulk.git"

homepage = "https://github.com/skillzaa/hulk.git"

license = "MIT OR Apache-2.0"
readme = "README.md"
doctest = true

[[bin]]
name = "hulk"
test = false
bench = false


[dependencies]
qndr = "0.1.7"
comrak = "0.12.1"
brown = "0.2.0"
fltk = "^1.2"
fltk-flow = "0.1.2"
yansi = "0.5.0"